--- a/portfolio/src/styles/style.css
+++ b/portfolio/src/styles/style.css
@@ -9,7 +9,36 @@ body {
     margin-top: 55px;
     width: 70%;
     margin-bottom: 55px;
+    text-align: center;
+    
+   
 }
 .nav {
-    background-color: #010145;
+    background-color: #ffffff;
+}
+#footer {
+    height: 40px;
+    width: 100%;
+    position: fixed;
+    left:0;
+    bottom:0;
+    right:0;
+    background-color: #ffffff;
+    text-align: center;
+    margin-top: auto;
+
+}
+#contact {
+    Display: flex;
+        Align-Items: center;
+        Justify-Content: center;
+}
+#skills {
+    Display: flex;
+    Align-Items: center;
+    Justify-Content: center;
+    font-size: larger;
+}
+#about {
+    font-size: large;
 }
